--- a/templates/for_applicant/write_apply.html
+++ b/templates/for_applicant/write_apply.html
@@ -17,7 +17,12 @@
             {% for question in template.questions.all %}
                <li class="question">
                   <label for="question_{{question.id}}">{{question.question_text}}</label>
-                  <textarea name="answer_{{question.id}}" id="answer_{{question.id}}" cols="50" rows="5"></textarea>
+                  {% if question.allow_file_upload %}
+                     <!-- 파일 업로드가 허용된 경우 파일 필드 표시 -->
+                     <input type="file" name="file_{{question.id}}">
+                  {% else %}
+                     <textarea name="answer_{{question.id}}"  cols="50" rows="5"></textarea>
+                  {% endif %}
                </li>
             {% endfor %}
          </ol>
