[fix] 지원자용 초기 페이지 앱 변경

--- a/templates/for_applicant/base.html
+++ b/templates/for_applicant/base.html
@@ -31,7 +31,7 @@
 <body>
     <header>
         <nav class="applicant_navbar">
-            <a href="{% url 'accounts:initialApplicant' %}">
+            <a href="{% url 'applicants:initial' %}">
                 <img id="mainLogo" src="{% static 'images/main_logo.png' %}" alt="Hire Hub">
             </a>
             {% block header %}
