[fix] 지원자 로그인되어 있을 시 로그아웃 버튼 뜨도록 변경

--- a/templates/for_applicant/initial.html
+++ b/templates/for_applicant/initial.html
@@ -4,11 +4,11 @@
 {% block header %}
     <div class="initial_btns">
         {% if user.is_authenticated %}
-            {% if user.applicant %}
-                <span>지원자: {{ user.name }}님</span>
-            {% endif %}
+            <span>{{ user.name }}님</span> <!-- 사용자 객체 출력 -->
+            <a id="logout_btn" href="{% url 'applicants:logout' %}">로그아웃</a>
         {% else %}
-            <a class="link_write" href="{% url 'applicants:signup' %}">회원가입</a>
+            <a href="{% url 'applicants:login' %}">로그인</a>
+            <a href="{% url 'applicants:signup' %}">회원가입</a>
         {% endif %}
         <!-- {% if time_over %}
         <a class="link_write link_timeover" href="{% url 'applicants:timeover' %}">지원 마감</a>
