[fix] applicant관련 JS 파일 생성

--- a/templates/for_applicant/login.html
+++ b/templates/for_applicant/login.html
@@ -55,5 +55,5 @@
       </div>
    </div>
 </body>
-<script src="{% static 'js/applicant_login.js' %}"></script>
+<script src="{% static 'js/applicant/login.js' %}"></script>
 </html>
