--- a/templates/for_applicant/signup.html
+++ b/templates/for_applicant/signup.html
@@ -78,5 +78,5 @@
       </div>
    </div>
 </body>
-<script src="{% static 'js/applicant_signup.js' %}"></script>
+<script src="{% static 'js/applicant/signup.js' %}"></script>
 </html>   
