--- a/templates/for_applicant/password_reset_confirm.html
+++ b/templates/for_applicant/password_reset_confirm.html
@@ -12,6 +12,7 @@
       <link rel="stylesheet" href="{% static 'css/reset.css' %}">
       <link rel="stylesheet" href="{% static 'css/variable.css' %}">
       <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+      <link rel="stylesheet" href="{% static 'css/for_applicant.css' %}">
       <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css">
       <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
       <style>
@@ -32,24 +33,20 @@
    {% endif %}
    <div class="login_container">
       <div class="login_left_container">
-         <p class="login_head">LOG IN</p>
+         <p class="login_head">비밀번호 재설정</p>
          <div class="loginform_container">
-            <form method="POST" action="" id="login_form">
+            <p>새 비밀번호를 입력해 주세요.</p>
+            <form method="POST" action="" id="pwd_reset_form">
                {% csrf_token %}
-               <input type="email" name="email" id="email" placeholder="이메일" required>
+               <label for="new_password1">새 비밀번호</label>
+               <input type="password" name="new_password1" id="new_password1" required>
 
-               <input type="password" name="password" id="password" placeholder="비밀번호" required>
-               <button type="submit" id="login_btn">로그인 하기</button>
+               <label for="new_password1">새 비밀번호 확인</label>
+               <input type="password" name="new_password2" id="new_password2" required>
+
+               <button type="submit" id="password_reset_confirm_btn">저장하기</button>
             </form>
          </div>
-         <a class="signup_link" href="{% url 'applicants:signup' %}">
-            <img src="{% static 'images/rocket.png' %}">
-            <span>빠른 회원가입하기</span>
-         </a>
-         <span>|</span>
-         <a class="findpwd_link" href="{% url 'applicants:password_reset' %}">
-            <span>비밀번호 찾기</span>
-         </a>
       </div>
       <div class="login_right_container">
          <p class="login_comment">효율적인 인재 영입의 시작</p>
@@ -57,5 +54,5 @@
       </div>
    </div>
 </body>
-<script src="{% static 'js/applicant/login.js' %}"></script>
+<script src="{% static 'js/applicant/password_reset_confirm.js' %}"></script>
 </html>
