--- a/static/css/for_applicant.css
+++ b/static/css/for_applicant.css
@@ -23,8 +23,9 @@ main {
 .link_signup {
    color: white;
    background-color: var(--main-color);
-   padding: 1.3rem 2rem;
+   padding: 1.3rem 2.5rem;
    margin: 0 3rem;
+   margin-left: 2rem;
    border-radius: 1rem;
    font-weight: 600;
 }
@@ -252,4 +253,80 @@ fieldset {
    margin-bottom: 10px;
    font-size: 1.5rem;
    font-weight: 500;
+}
+
+/* login.html */
+.login_head {
+   margin-bottom: 50px;
+}
+#login_form {
+   width: 500px;
+   align-items: center;
+}
+#login_form input {
+   width: 50rem;
+   height: 5rem;
+   border-radius: 1.5rem;
+   font-size: 1.8rem;
+   border: 1.5px solid var(--main-color);
+   margin-bottom: 10px;
+   padding: 0 2rem;
+}
+#login_form button {
+   background-color: var(--main-color);
+   color: white;
+   width: 35rem;
+   height: 5rem;
+   border-radius: 1.5rem;
+   font-size: 2rem;
+   font-weight: bold;
+   margin-top: 5rem;
+}
+.link_container {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   width: 25rem;
+}
+.divider, .findpwd_link {
+   margin-top: 1.8rem;
+   font-size: 1.6rem;
+}
+.signup_link:hover, .findpwd_link:hover {
+   text-decoration: underline;
+}
+
+/* password_reset.html */
+.password_reset_form_container {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+.password_reset_head {
+   margin-bottom: 0;
+}
+.password_reset_form_container p {
+   font-size: 1.5rem;
+   margin-bottom: 8rem;
+}
+#password_reset_form p label {
+   display: none;
+}
+#id_email, #new_password1, #new_password2 {
+   width: 40rem;
+   height: 5rem;
+   border-radius: 1.5rem;
+   font-size: 1.8rem;
+   border: 1.5px solid var(--main-color);
+   padding: 0 2rem;
+}
+#new_password1 {
+   margin-bottom: 1rem;
+}
+#new_password2 {
+   margin-bottom: 8rem;
+}
+#password_reset_btn , #password_reset_confirm_btn {
+   margin-top: 0;
+   color: white;
 }
