--- a/templates/for_applicant/login.html
+++ b/templates/for_applicant/login.html
@@ -12,6 +12,7 @@
       <link rel="stylesheet" href="{% static 'css/reset.css' %}">
       <link rel="stylesheet" href="{% static 'css/variable.css' %}">
       <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+      <link rel="stylesheet" href="{% static 'css/for_applicant.css' %}">
       <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css">
       <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
       <style>
@@ -42,14 +43,16 @@
                <button type="submit" id="login_btn">로그인 하기</button>
             </form>
          </div>
-         <a class="signup_link" href="{% url 'applicants:signup' %}">
-            <img src="{% static 'images/rocket.png' %}">
-            <span>빠른 회원가입하기</span>
-         </a>
-         <span>|</span>
-         <a class="findpwd_link" href="{% url 'applicants:password_reset' %}">
-            <span>비밀번호 찾기</span>
-         </a>
+         <div class="link_container">
+            <a class="signup_link" href="{% url 'applicants:signup' %}">
+               <img src="{% static 'images/rocket.png' %}">
+               <span>빠른 회원가입하기</span>
+            </a>
+            <span class="divider">|</span>
+            <a class="findpwd_link" href="{% url 'applicants:password_reset' %}">
+               <span>비밀번호 찾기</span>
+            </a>
+         </div>
       </div>
       <div class="login_right_container">
          <p class="login_comment">효율적인 인재 영입의 시작</p>
