--- a/templates/for_applicant/password_reset.html
+++ b/templates/for_applicant/password_reset.html
@@ -31,11 +31,12 @@
          {% endfor %}
       </ul>
    {% endif %}
-   <div class="login_container">
-      <div class="login_left_container">
-         <p class="login_head">비밀번호 재설정</p>
-         <div class="loginform_container">
-            <p>비밀번호를 잊어버리셨나요?</p>
+   <div class="password_reset_container">
+      <div class="password_reset_left_container">
+         <p class="password_reset_head">비밀번호 재설정</p>
+         <div class="password_reset_form_container">
+            <p style="margin-bottom:0">비밀번호를 찾고자하는 아이디를 입력해주세요.</p>
+            <p>이메일이 전송되는데 시간이 소요됩니다.</p>
             <form method="POST" action="" id="password_reset_form">
                {% csrf_token %}
                {{ form.as_p }}
@@ -43,11 +44,16 @@
             </form>
          </div>
       </div>
-      <div class="login_right_container">
-         <p class="login_comment">효율적인 인재 영입의 시작</p>
-         <p class="login_logo">PIROGRAMMING</p>
+      <div class="password_reset_right_container">
+         <p class="password_reset_comment">효율적인 인재 영입의 시작</p>
+         <p class="password_reset_logo">PIROGRAMMING</p>
       </div>
    </div>
 </body>
 <script src="{% static 'js/applicant/password_reset.js' %}"></script>
+<script>
+   window.onload = function() {
+      document.getElementById('id_email').setAttribute('placeholder', '이메일');
+   }
+</script>
 </html>
