--- a/templates/for_applicant/password_reset_confirm.html
+++ b/templates/for_applicant/password_reset_confirm.html
@@ -31,26 +31,23 @@
          {% endfor %}
       </ul>
    {% endif %}
-   <div class="login_container">
-      <div class="login_left_container">
-         <p class="login_head">비밀번호 재설정</p>
-         <div class="loginform_container">
+   <div class="password_reset_container">
+      <div class="password_reset_left_container">
+         <p class="password_reset_head">비밀번호 재설정</p>
+         <div class="password_reset_form_container">
             <p>새 비밀번호를 입력해 주세요.</p>
-            <form method="POST" action="" id="pwd_reset_form">
+            <form method="POST" action="" id="password_reset_confirm_form">
                {% csrf_token %}
-               <label for="new_password1">새 비밀번호</label>
-               <input type="password" name="new_password1" id="new_password1" required>
-
-               <label for="new_password1">새 비밀번호 확인</label>
-               <input type="password" name="new_password2" id="new_password2" required>
+               <input type="password" name="new_password1" id="new_password1" required placeholder="새 비밀번호">
+               <input type="password" name="new_password2" id="new_password2" required placeholder="새 비밀번호 확인">
 
                <button type="submit" id="password_reset_confirm_btn">저장하기</button>
             </form>
          </div>
       </div>
-      <div class="login_right_container">
-         <p class="login_comment">효율적인 인재 영입의 시작</p>
-         <p class="login_logo">PIROGRAMMING</p>
+      <div class="password_reset_right_container">
+         <p class="password_reset_comment">효율적인 인재 영입의 시작</p>
+         <p class="password_reset_logo">PIROGRAMMING</p>
       </div>
    </div>
 </body>
