--- a/templates/for_applicant/signup.html
+++ b/templates/for_applicant/signup.html
@@ -1,36 +1,11 @@
+{% extends 'accounts_base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="ko">
 
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="{% static 'css/reset.css' %}">
-   <link rel="stylesheet" href="{% static 'css/variable.css' %}">
-   <link rel="stylesheet" href="{% static 'css/accounts.css' %}">
+{% block head %}
    <link rel="stylesheet" href="{% static 'css/for_applicant.css' %}">
-   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css">
-   <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
-   <style>
-      body {
-         font-family: 'Pretendard', sans-serif;
-      }
-   </style>
-   {% block head %} {% endblock %}
-</head>
-<body>
-   {% if messages %}
-      <ul>
-         {% for message in messages %}
-            <li class="{{ message.tags }}">{{ message }}</li>
-            <p>{{ message }}</p>
-         {% endfor %}
-      </ul>
-   {% endif %}
+{% endblock head %}
+
+{% block content %}
    <div class="signup_container">
       <div class="signup_left_container">
          <p class="signup_head">SIGN UP</p>
@@ -77,6 +52,5 @@
          <p class="signup_logo">HIREHUB</p>
       </div>
    </div>
-</body>
-<script src="{% static 'js/applicant/signup.js' %}"></script>
-</html>   
+   <script src="{% static 'js/applicant/signup.js' %}"></script>
+{% endblock content %}
