--- a/templates/for_applicant/initial.html
+++ b/templates/for_applicant/initial.html
@@ -26,7 +26,7 @@
                 <a class="link_check" href="{% url 'applicants:apply_check' %}">지원 상태 확인하기</a>
             </div>
         {% else %}
-            <a class="link_check" href="{% url 'applicants:signup' %}">피로그래밍 22기 지원하러 바로가기</a>
+            <a class="link_check" href="{% url 'applicants:login' %}">피로그래밍 22기 지원하러 바로가기</a>
         {% endif %}
     </div>
     <script>
