[fix] SMTP 메일 네이버로 변경

--- a/templates/for_applicant/password_reset.html
+++ b/templates/for_applicant/password_reset.html
@@ -10,8 +10,7 @@
       <div class="password_reset_left_container">
          <p class="password_reset_head">비밀번호 재설정</p>
          <div class="password_reset_form_container">
-            <p style="margin-bottom:0">비밀번호를 찾고자하는 아이디를 입력해주세요.</p>
-            <p>이메일이 전송되는데 시간이 소요됩니다.</p>
+            <p>비밀번호를 찾고자하는 아이디를 입력해주세요.</p>
             <form method="POST" action="" id="password_reset_form">
                {% csrf_token %}
                {{ form.as_p }}
