--- a/templates/for_applicant/base.html
+++ b/templates/for_applicant/base.html
@@ -35,9 +35,9 @@
                 <img id="mainLogo" src="{% static 'images/main_logo.png' %}" alt="Hire Hub">
             </a>
             {% block header %}
-            
-            {% endblock %}
-        </nav>
+        
+            {% endblock header %}
+        </nav> 
     </header>
     <main>
         {% block content %}<!-- 여기 내용-->{% endblock content %}
