[design] 지원자 비밀번호 재설정 페이지 디자인 변경

--- a/templates/for_applicant/password_reset.html
+++ b/templates/for_applicant/password_reset.html
@@ -1,4 +1,4 @@
-{% extends 'accounts_base.html' %}
+{% extends 'for_applicant/base.html' %}
 {% load static %}
 
 {% block head %}
@@ -6,21 +6,24 @@
 {% endblock head %}
 
 {% block content %}
-   <div class="password_reset_container">
-      <div class="password_reset_left_container">
-         <p class="password_reset_head">비밀번호 재설정</p>
+   <div class="password_reset">
+      <p class="password_reset_head">| 비밀번호 재설정</p>
+      <div class="password_reset_container">
+         <div class="password_reset_intro">
+            <img src="{% static 'images/password_check.png' %}" alt="">
+            <span>비밀번호를 찾고자하는 아이디를 입력해주세요.</span>
+         </div>
          <div class="password_reset_form_container">
-            <p>비밀번호를 찾고자하는 아이디를 입력해주세요.</p>
             <form method="POST" action="" id="password_reset_form">
                {% csrf_token %}
-               {{ form.as_p }}
-               <button type="submit" id="password_reset_btn">전송하기</button>
+               <div class="email_box">
+                  <label for="email">이메일</label>
+                  <input type="email" name="email" id="email" placeholder="회원가입에 사용한 이메일을 입력해주세요." required>
+               </div>
+               
+               <button type="submit" id="password_reset_btn">인증하기</button>
             </form>
          </div>
-      </div>
-      <div class="password_reset_right_container">
-         <p class="password_reset_comment">효율적인 인재 영입의 시작</p>
-         <p class="password_reset_logo">PIROGRAMMING</p>
       </div>
    </div>
    <script src="{% static 'js/applicant/password_reset.js' %}"></script>
