--- a/static/css/for_applicant.css
+++ b/static/css/for_applicant.css
@@ -263,21 +263,69 @@ main {
 }
 
 /* password_reset.html */
+.password_reset {
+   display: flex;
+   width: 94rem;
+   height: 100%;
+   flex-direction: column;
+   align-items: flex-start;
+   justify-content: center;
+   margin: auto;
+}
+.password_reset_container {
+   width: 100%;
+   height: 50rem;
+   background-color: #F8F8F8;
+   padding: 5rem 7rem;
+}
 .password_reset_form_container {
    display: flex;
    flex-direction: column;
    align-items: center;
+   margin-top: 8rem;
+}
+#password_reset_form {
+   width: 50rem;
+   display: flex;
+   justify-content: space-between;
+   align-items: flex-end;
 }
 .password_reset_head {
-   margin-bottom: 0;
+   margin-bottom: 1.8rem;
+   font-size: 3rem;
+   font-weight: 500;
 }
-.password_reset_form_container p {
+.password_reset_intro {
+   display: flex;
+   align-items: center;
+   gap: 1rem;
+}
+.password_reset_intro img {
+   width: 3.3rem;
+}
+.password_reset_intro span {
+   font-size: 1.6rem;
+}
+#password_reset_form {
    font-size: 1.5rem;
-   margin-bottom: 8rem;
 }
-#password_reset_form p label {
-   display: none;
+.email_box {
+   display: flex;
+   flex-direction: column;
 }
+.email_box label {
+   font-weight: 500;
+   margin-left: 1rem;
+}
+.email_box input {
+   margin-top: 0.8rem;
+   width: 33rem;
+   height: 4.5rem;
+   border: 3px solid #F3F3F3;
+   border-radius: 0.7rem;
+   padding: 1rem;
+}
+
 #id_email, #new_password1, #new_password2 {
    width: 40rem;
    height: 5rem;
@@ -295,4 +343,9 @@ main {
 #password_reset_btn , #password_reset_confirm_btn {
    margin-top: 0;
    color: white;
+   background-color: #A3A3A3;
+   border-radius: 0.5rem;
+   width: 12rem;
+   height: 4.4rem;
+   font-weight: 600;
 }
