--- a/static/css/for_applicant.css
+++ b/static/css/for_applicant.css
@@ -317,7 +317,7 @@ main {
    font-weight: 500;
    margin-left: 1rem;
 }
-.email_box input {
+.email_box input, #password_reset_confirm_form input {
    margin-top: 0.8rem;
    width: 33rem;
    height: 4.5rem;
@@ -326,20 +326,17 @@ main {
    padding: 1rem;
 }
 
-#id_email, #new_password1, #new_password2 {
-   width: 40rem;
-   height: 5rem;
-   border-radius: 1.5rem;
-   font-size: 1.8rem;
-   border: 1.5px solid var(--main-color);
-   padding: 0 2rem;
+#password_reset_confirm_form {
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   font-size: 1.5rem;
 }
-#new_password1 {
-   margin-bottom: 1rem;
+#password_reset_confirm_form label {
+   font-weight: 500;
+   margin-left: 1rem;
 }
-#new_password2 {
-   margin-bottom: 8rem;
-}
+
 #password_reset_btn , #password_reset_confirm_btn {
    margin-top: 0;
    color: white;
@@ -348,4 +345,11 @@ main {
    width: 12rem;
    height: 4.4rem;
    font-weight: 600;
+}
+#password_reset_confirm_btn {
+   background-color: var(--main-color);
+   width: 33rem;
+   height: 5.9rem;
+   font-size: 2.4rem;
+   margin-top: 7rem;
 }
