--- a/templates/for_applicant/password_reset_confirm.html
+++ b/templates/for_applicant/password_reset_confirm.html
@@ -1,28 +1,23 @@
-{% extends 'accounts_base.html' %}
+{% extends 'for_applicant/base.html' %}
 {% load static %}
 
-{% block head %}
-   <link rel="stylesheet" href="{% static 'css/for_applicant.css' %}">
-{% endblock head %}
-
 {% block content %}
-   <div class="password_reset_container">
-      <div class="password_reset_left_container">
-         <p class="password_reset_head">비밀번호 재설정</p>
+   <div class="password_reset">
+      <p class="password_reset_head">| 비밀번호 재설정</p>
+      <div class="password_reset_container">
+         <div class="password_reset_intro">
+            <img src="{% static 'images/password_check.png' %}" alt="">
+            <span>새 비밀번호를 설정해주세요.</span>
+         </div>
          <div class="password_reset_form_container">
-            <p>새 비밀번호를 입력해 주세요.</p>
             <form method="POST" action="" id="password_reset_confirm_form">
                {% csrf_token %}
-               <input type="password" name="new_password1" id="new_password1" required placeholder="새 비밀번호">
-               <input type="password" name="new_password2" id="new_password2" required placeholder="새 비밀번호 확인">
-
-               <button type="submit" id="password_reset_confirm_btn">저장하기</button>
+               <label for="password_reset">비밀번호 변경</label>
+               <input type="password" name="new_password1" id="new_password1" required placeholder="새 비밀번호를 입력해주세요.">
+               <input type="password" name="new_password2" id="new_password2" required placeholder="새 비밀번호를 다시 입력해주세요.">
+               <button type="submit" id="password_reset_confirm_btn">비밀번호 변경</button>
             </form>
          </div>
-      </div>
-      <div class="password_reset_right_container">
-         <p class="password_reset_comment">효율적인 인재 영입의 시작</p>
-         <p class="password_reset_logo">PIROGRAMMING</p>
       </div>
    </div>
    <script src="{% static 'js/applicant/password_reset_confirm.js' %}"></script>
